--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,9 @@
     "default_popup": "popup.html"
     "default_icon":"ext_logo.png"
   },
+  "icons": {
+    "128": "ext_logo.png"
+  },
   "content_scripts": [
     {
       "js": [
