--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "service_worker": "service-worker.js"
   },
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
     "default_icon":"ext_logo.png"
   },
   "icons": {
