--- a/manifest.json
+++ b/manifest.json
@@ -8,11 +8,19 @@
   },
   "action": {
     "default_popup": "popup.html",
-    "default_icon":"ext_logo.png"
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png"
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    },
   },
   "icons": {
-    "128": "ext_logo.png"
-  },
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },      
   "content_scripts": [
     {
       "js": [
